# Yamadai-Syllabus2CSV

./: .gitignore  README.md  main.py  pyproject.toml
lib/: GetUrlList.py
syllabus/: GetUrlList.py  __init__.py  get_element.py
tests/: test.py
yu_syllabus/: FacultyDict.py  GetUrlList.py  __init__.py  get_element.py
