[tool.poetry]
name = "yamadai-syllabus2csv"
version = "0.1.0"
description = ""
authors = ["ankuru <ankuru.ahahahaha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
